--- a/index.html
+++ b/index.html
@@ -36,40 +36,16 @@
     </nav>
     <main id="home">
         <div class="content">
-            <h1>Para minha amada esposa...</h1>
-        </div>
-        <br><br>
-        <div class="content">
-            <h2>Cartinham</h2>
+            <h1>Para minha amada esposa..</h1>
         </div>
         <br>
         <div class="content">
-            <p>
-                Aiai mais um dia mais um episódio, antes de mais nada, q tal relembrar um pouquinho de tudo?? 
-                <br><br>
-                Era uma vez uma princesa e um príncipe, ambos viviam suas vidas, estudavam, ajudavam seus pais nas atividades diárias e  cuidavam de suas casas como bons filhos. Certo dia, os dois começaram a estudar juntos, e então a historia dos nossos dois apaixonados começam... 
-                <br><br>
-                O príncipe em seu primeiro olhar com a princesa já estava encantado com sua beleza e mansidão, passou vários dias pensando em como conquistaria a mão de sua amada, até que finalmente juntou tds as suas forças para entregar uma carta que havia escrito com tanto amor e carinho (com direito a poesia), mas como a vida n é um mar de rosas, n foi a hora certa para o nss querido principe. Após dois anos a nss princesa e principe finalmente se reencontraram 
-                <br><br>
-                E aqui estamos nós Britolol e Mildredlol, o casal do ano, pensar que nossas vidas mudaram tanto kkkk foram tantas noites em claro esperando por você meu amor, e quando vc chegou, eu demorei pra aceitar q era verdade kkkkk eu nunca vou esquecer 
-                <br><br>
-                   <h4> “Oie, nossa quanto tempo q a gente n se fala kkkk q merda né” </h4>
-                <br><br>
-                e dps de um dia e meio 
-                <br><br>
-                    <h4> “Oii, sim né kkkkk”</h4> 
-                <br><br>
-                E assim nossas vidas mudaram completamente, começamos a jogar juntos, conversar o dia td, vdd kkkk outra coisa q n vou esquecer, nesse msm dia q voltou a falar cmg, vc disse q tava com insônia e nós conversamos um bom tempo da madrugada kkkk
-                <br><br> 
-                Dia após dia eu me via mais apaixonado pela minha princesa, até que finalmente começamos a namorar, o casal finalmente estava junto ^^
-                <br><br>
-                <p>Mi, eu quero agradacer por vc ser tão boa cmg, sempre que passo por momentos difíceis é vc quem me ajuda, vc q me auxilia a sempre descobrir oq é certo e resolver meus problemas, vc é única, vc faz eu me sentir a pessoa mais feliz do mundo, nada me proporciona algo tão bom quanto vc, vc é linda, a garota mais linda de todas, não existe comparação com sua beleza (e gostosura~~), ri de tds as minhas piadas ruins, faz piadas ruins, rimos juntos como dois gays, vc com certeza é a garota mais perfeita pra mim, eu te amo mais que tudo, te amo com todo meu coração, te amo com tds as minhas forças, te amo como nunca amei algo em toda minha vida, vc é a coisa mais especial que tenho, largaria meu pc, trabalho, osu, tudo pra passar o resto da minha vida com vc</p>
-                <br><br><h3> Mi.. eu te amo S22</h3>
-            </p>
+            <h2>Titulo da cartinha</h2>
+            <p>sdsdsdds</p>
         </div>
         <br>
-        <br id="fofos">
-        <div class="content">
+        <br>
+        <div id="fofos" class="content">
             <h2>Momentinhos fofos</h2>
             Infelizmente não tenho muitas salvos (claramente preferimos aproveitar do que guardar 😎🌹) 
         </div>
@@ -86,9 +62,8 @@
             <img src="./src/rs.jpg">
             <img src="./src/rs2.jpg">
         </div>
-        <br>
-        <br id="memories">
-        <div class="content">
+        <br><br>
+        <div id="memories" class="content">
             <h2>Umas lembrancinhas aleatórias~~</h2>
         </div>
         <br>
@@ -109,30 +84,17 @@
             <img src="./src/sla.png" alt="">
             <img src="./src/sla2.png" alt="">
             <img src="./src/sonho realizado.png" alt="">
-            <img src="./src/....png" alt="">
-            <img src="./src/...2.png" alt="">
+            <img src="./src/1.png" alt="">
+            <img src="./src/2.png" alt="">
         </div>
-        <br>
-        <br id="mariage">
-        <div class="content">
+        <br><br>
+        <div id="mariage" class="content">
             <h2>Futuro..</h2>
         </div>
         <br>
         <div class="content">
-            <p>
-                Já faz mais de um ano q estamos juntos e se tem uma coisa q eu tenho certeza é q eu nunca fui tão feliz em toda minha vida, foram tantos e tantos momentos q fica difícil dizer todos kkkk e com todas essas lembranças já podemos construir uma história fácil fácil, e nós vamos, já estamos na verdade kkkkkk 
-                <br><br>
-                Desde a primeira vez q te vi, eu sempre pensei em uma coisa <i><b>“Um dia eu vou casar com essa garota”</b></i>
-                e hj eu estou aqui, ainda não somos casados oficialmente, mas tenho a maior e absoluta certeza q somos muito mais que casados em nossas mentes...
-                <br><br>
-                <h3>Eu te prometo Mildred Gomes Costa, eu vou me casar com vc 💖</h3>
-                <br><br>
-                <p>Vamos ter o nss tão sonhado apartamento, dps nss casinha, a Rose e o Dante, e cada dia que passar eu vou te amar cada vez mais...</p>
-                <br><br>
-                    <h2><i><b> De: seu marido...</b></i></h2>
-            </p>
         </div>
-        <br><br><br>
+        <br><br><br><br>
     </main>
 
 <script src="https://kit.fontawesome.com/98284644ed.js" crossorigin="anonymous"></script>
