--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <img src="./src/sla.png" alt="">
             <img src="./src/sla2.png" alt="">
             <img src="./src/sonho realizado.png" alt="">
-            <img src="./src/1.png" alt="">
-            <img src="./src/2.png" alt="">
+            <img src="./src/teste.png" alt="">
+            <img src="./src/funciona.png" alt="">
         </div>
         <br><br>
         <div id="mariage" class="content">
